--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,18 +1,133 @@
-.content {
+.Home {
   background-image: linear-gradient(
       to bottom,
       rgb(246 245 252 / 0%),
       rgba(35, 34, 39, 1)
     ),
     url("https://hips.hearstapps.com/elledecor/assets/16/28/1468508286-ce-la-vi-restaurant-indoor.jpg");
-    /* url("https://media.cntraveler.com/photos/5a930fcaa876ae5cfa61c86b/master/pass/Il-Ristorante-Luca-Fantin_2018_Il-Ristorante-Luca-Fantin_night.jpg"); */
+  /* url("https://media.cntraveler.com/photos/5a930fcaa876ae5cfa61c86b/master/pass/Il-Ristorante-Luca-Fantin_2018_Il-Ristorante-Luca-Fantin_night.jpg"); */
   width: 100%;
   height: 628px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 240px 20px 0;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 16px;
+  /* padding: 240px 20px 0; */
 }
+
+.content {
+  display: grid;
+  grid-auto-rows: auto;
+  grid-template-columns: repeat(auto-fit, minmax(410px, 1fr));
+}
+
+.delivery {
+  background-color: var(--logo);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 4px;
+  width: 140px;
+  padding: 4px 8px 4px 14px;
+  font-size: 1.4rem;
+  font-weight: 800;
+  border-radius: 20px;
+}
+
+.content section {
+  padding: 28px 20px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-content: center;
+}
+
+.content section div p {
+  color: var(--black);
+}
+
+.content section div figure {
+  background-color: var(--white-card);
+  border-radius: 50%;
+  width: 2.8rem;
+  height: 2.8rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  box-shadow: -2px 3px 6px -2px var(--pure-black);
+}
+
+.content section div figure img {
+  width: 80%;
+}
+
+.content section > p {
+  font-size: 4rem;
+  font-weight: 800;
+  letter-spacing: 2px;
+  color: var(--logo);
+}
+
+.content span {
+  color: var(--yellow);
+  font-size: 4.8rem;
+}
+
+.content section > p:last-of-type {
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: var(--white-card);
+  text-align: center;
+}
+
+.content button {
+  background-color: var(--yellow);
+  width: 80%;
+  margin: auto;
+  padding: 8px;
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: var(--black);
+  border: none;
+  border-radius: 8px;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.content button:hover {
+  box-shadow: 0px 4px 6px 0px var(--black-hover);
+}
+
+.etc {
+  background-color: aqua;
+}
+
+@media screen and (min-width: 820px) {
+  .content section > p {
+    font-size: 5rem;
+  }
+
+  .content span {
+    font-size: 5.8rem;
+  }
+
+  .content section > p:last-of-type {
+    text-align: left;
+    width: 80%;
+  }
+
+  .content button {
+    width: fit-content;
+    padding: 8px 16px;
+    margin: initial;
+  }
+}
+
+/* @media screen and (min-width: 820px) {
+
+
+  
+
+  .content button {
+    width: auto;
+  }
+} */
