--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,14 @@
 .Nav {
   color: var(--white);
+  background-color: var(--black);
   display: flex;
   align-items: center;
   padding: 12px 60px;
   justify-content: space-between;
+  position: sticky;
+  top: 0px;
+  width: 100%;
+  z-index: 10;
 }
 
 .Nav img {
