--- a/src/components/MainContainer/Home/Home.module.css
+++ b/src/components/MainContainer/Home/Home.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-auto-rows: auto;
   grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  column-gap: 88px;
 }
 
 .delivery {
@@ -107,6 +108,7 @@
   row-gap: 100px;
   flex-wrap: wrap;
   justify-content: flex-end;
+  max-width: 420px;
 }
 
 .etc_menu > div {
@@ -152,8 +154,12 @@
 }
 
 @media screen and (min-width: 820px) {
+  .Home {
+    grid-template-columns: repeat(auto-fit, minmax(329px, 1fr));
+  }
+
   .Home section {
-    padding: 40px 20px 0 68px;
+    padding: 56px 0 0 0;
   }
 
   .Left > p {
@@ -175,35 +181,37 @@
     margin: initial;
   }
 
+  .etc_menu {
+    min-width: 420px;
+    right: 28px;
+  }
+
   .etc > img {
     position: absolute;
     top: 36px;
-    right: 58px;
+    right: -20px;
     height: 600px;
     width: 400px;
   }
 }
 
-@media screen and (max-width: 1225px) {
+@media screen and (max-width: 1320px) {
   .etc_menu {
-    width: 99%;
-    right: 52px;
+    right: 28px;
   }
 
   .etc > img {
-    right: 20px;
+    right: -40px;
   }
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1040px) {
   .etc_menu {
     width: initial;
-    right: initial;
     justify-content: center;
     row-gap: 68px;
   }
-
-  .etc_menu div {
+  .etc_menu > div {
     width: 154px;
   }
   .etc_menu > div img {
@@ -216,10 +224,22 @@
   .etc_menu > div p:nth-of-type(2) {
     font-size: 1rem;
   }
-
   .etc > img {
     right: 0;
     max-width: 300px;
     width: 360px;
+  }
+}
+
+@media (max-width: 820px) {
+  .etc_menu {
+    right: initial;
+  }
+}
+
+@media screen and (max-width: 515px) {
+  .Home section {
+    margin: 0 auto;
+    width: 335px;
   }
 }
