--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 12px 60px;
   justify-content: space-between;
-  position: sticky;
+  position: fixed;
   top: 0px;
   width: 100%;
   z-index: 10;
