under construction component added, some routes on nav, and moved cart container in order to work on all the app

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,7 +11,7 @@
   z-index: 10;
 }
 
-.Nav img {
+.Nav a img {
   height: 60px;
 }
 
@@ -28,8 +28,13 @@
   font-size: 1.6rem;
 }
 
+.Nav_right ul a {
+  text-decoration: none;
+}
+
 .Nav_right ul li {
   cursor: pointer;
+  color: var(--white-card);
 }
 
 .Cart {
