--- a/src/components/MainContainer/CartContainer/CartContainer.module.css
+++ b/src/components/MainContainer/CartContainer/CartContainer.module.css
@@ -145,3 +145,32 @@
   padding: 8px;
   border-radius: 20px;
 }
+
+/* Empty cart */
+
+.empty {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 0px 20px;
+  gap: 20px;
+  background: rgb(52, 58, 64);
+  background: linear-gradient(
+    180deg,
+    rgba(52, 58, 64, 1) 0%,
+    rgba(210, 187, 178, 1) 100%
+  );
+  justify-content: center;
+}
+
+.empty > img {
+  width: 300px;
+}
+
+.empty p {
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--black-cart2);
+}
